[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polars-helper-functions"
version = "0.1.0"
description = "Reusable helper utilities for Polars DataFrame/LazyFrame workflows."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Your Name"}
]
dependencies = [
  "polars>=0.20.0",
  "openpyxl>=3.1.0",
]
keywords = ["polars", "dataframe", "helpers", "spyder"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/your-org/polars-helper-functions"
Repository = "https://github.com/your-org/polars-helper-functions"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

